Added all recurrent layers

--- a/src/models/GRU 512 6L.ipynb
+++ b/src/models/GRU 512 6L.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Especificação do modelo\n",
     "\n",
-    "Célula LSTM\n",
+    "Célula GRU\n",
     "512 units\n",
-    "4 camadas"
+    "6 camadas"
    ]
   },
   {
@@ -23,7 +23,7 @@
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
-    "from tensorflow.keras.layers import Embedding, LSTM, TimeDistributed, Dense\n",
+    "from tensorflow.keras.layers import Embedding, GRU, TimeDistributed, Dense\n",
     "\n",
     "import data\n",
     "import train"
@@ -38,10 +38,12 @@
     "UNITS = 512\n",
     "\n",
     "model = keras.models.Sequential()\n",
-    "model.add(LSTM(UNITS, return_sequences=True, input_shape=(None, train.INPUT_FEATURES), name=\"lstm_input\"))\n",
-    "model.add(LSTM(UNITS, return_sequences=True, name=\"lstm_2\"))\n",
-    "model.add(LSTM(UNITS, return_sequences=True, name=\"lstm_3\"))\n",
-    "model.add(LSTM(UNITS, return_sequences=True, name=\"lstm_4\"))\n",
+    "model.add(GRU(UNITS, return_sequences=True, input_shape=(None, train.INPUT_FEATURES), name=\"lstm_input\"))\n",
+    "model.add(GRU(UNITS, return_sequences=True, name=\"lstm_2\"))\n",
+    "model.add(GRU(UNITS, return_sequences=True, name=\"lstm_3\"))\n",
+    "model.add(GRU(UNITS, return_sequences=True, name=\"lstm_4\"))\n",
+    "model.add(GRU(UNITS, return_sequences=True, name=\"lstm_5\"))\n",
+    "model.add(GRU(UNITS, return_sequences=True, name=\"lstm_6\"))\n",
     "model.add(TimeDistributed(Dense(train.NUM_PHONEMES + 1), name=\"output\"))"
    ]
   },
