Starting TDNN Implementation

--- a/src/models/GRU 512 4L.ipynb
+++ b/src/models/GRU 512 4L.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(?, ?, 13)\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "lstm_input (GRU)             (None, None, 512)         807936    \n",
+      "_________________________________________________________________\n",
+      "lstm_2 (GRU)                 (None, None, 512)         1574400   \n",
+      "_________________________________________________________________\n",
+      "lstm_3 (GRU)                 (None, None, 512)         1574400   \n",
+      "_________________________________________________________________\n",
+      "lstm_4 (GRU)                 (None, None, 512)         1574400   \n",
+      "_________________________________________________________________\n",
+      "output (TimeDistributed)     (None, None, 45)          23085     \n",
+      "=================================================================\n",
+      "Total params: 5,554,221\n",
+      "Trainable params: 5,554,221\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "print(model.layers[0].input.shape)\n",
     "model.summary()"
@@ -99,9 +124,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (VENV)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
